[gd_scene load_steps=3 format=2]

[ext_resource path="res://Hand.gd" type="Script" id=1]
[ext_resource path="res://ManaButton.tscn" type="PackedScene" id=2]

[node name="Hand" type="ColorRect"]
script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="RedManaButton" parent="GridContainer" instance=ExtResource( 2 )]
margin_right = 0.0
margin_bottom = 0.0

[node name="WhiteManaButton" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 4.0
margin_right = 4.0
margin_bottom = 0.0

[node name="GreenManaButton" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_right = 8.0
margin_bottom = 0.0

[node name="BlackManaButton" parent="GridContainer" instance=ExtResource( 2 )]
margin_top = 4.0
margin_right = 0.0
margin_bottom = 4.0

[node name="BlueManaButton" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0

[node name="PurpleManaButton" parent="GridContainer" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 4.0
margin_right = 8.0
margin_bottom = 4.0
